--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -4,16 +4,7 @@
 .modal {
     margin: auto;
     display: flex;
-    // justify-content: flex-end;
     background-color: $white;
-    // background-image: url('/img/cart-dog.png');
-    // background-image: image-set(
-    //     url('/img/cart-dog.webp') type('image/webp') 1x,
-    //     url('/img/cart-dog.png') type('image/png') 1x);
-    // background-size: 324px;
-    // background-position: left;
-    // background-repeat: no-repeat;
-    //padding: 20px;
     border-radius: 24px;
     width: 100%;//80vw;
     max-width: 676px;
@@ -21,13 +12,26 @@
     min-height: 459px;
     overflow: hidden;
 
+    @include mobile {
+        flex-direction: column;
+        justify-content: center;
+    }
+
     &::before {
         content: '';
         display: block;
         width: 48%;
         background-image: url('/img/cart-dog.png');
+        background-image: image-set(
+            url('/img/cart-dog.webp') type('image/webp') 1x,
+            url('/img/cart-dog.png') type('image/png') 1x);
         background-size: cover;
         background-position: center;
+
+        @include mobile {
+            width: 100%;
+            height: 200px;
+        }
     }
 
     &__content {
@@ -35,6 +39,10 @@
         padding: 24px;
         display: flex;
         flex-direction: column;
+
+        @include mobile {
+            width: 100%;
+        }
     }
 
     &__title {
