--- a/src/scss/components/_preloader.scss
+++ b/src/scss/components/_preloader.scss
@@ -10,7 +10,8 @@
         width: 100%;
         height: 100%;
         z-index: 40;
-        //display: flex;
+        display: flex;
+        //display: none;
         justify-content: center;
         align-items: center;
         overflow: hidden;
