--- a/src/scss/components/_product.scss
+++ b/src/scss/components/_product.scss
@@ -55,16 +55,32 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        // gap: 4px;
+        border: 2px solid $purple;
         border-radius: 40px;
-        padding: 16px 24px;
+        padding: 14px 22px;
         width: 100%;
-        //height: 66px;
         background: $purple;
         font-weight: 700;
         font-size: 24px;
         text-align: center;
         color: $light;
-        //margin-top: auto;
+        opacity: 1;
+        outline: none;
+        transition-property: opacity, border;
+        transition-duration: 0.3s, 0.3s, 0.8s;
+        transition-timing-function: ease-in-out;
+
+        &:hover {
+            opacity: 0.7;
+        }
+
+        &:focus-visible {
+            border: 2px solid #642c7e;
+        }
+
+        &:active {
+            transform: scale(0.98);
+        }
     }
+
 }
